--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -199,7 +199,7 @@
     "\n",
     "Our agent is not learning with number of trainings, so that running more trials doesn't seem to be improved the performance.\n",
     "\n",
-    "Out agent received F grade for both safety and reliability which means that we can expect driving agent will be involved in a major accidents and also will not be able to complete the allocated trip in given time.\n",
+    "Out agent received F grade for both safety and reliability which means that we can expect driving agent will be involved in a major accidents and also, will not be able to complete the allocated trip in given time.\n",
     "\n",
     "**"
    ]
@@ -241,11 +241,16 @@
    "metadata": {},
    "source": [
     "**Answer:\n",
-    "For safety factor, we need to include 'light' and 'oncoming inputs in our build_state function so that our driving agent can observe the traffic light (ie. stop when the light is red and make a move when green) as well as observe oncoming car to prevent an accident.\n",
-    "We also need to include 'left' input. Therefore, our smartcab can observe cars coming from the left when our driving agent attempts to make a right turn while the traffic light is red.\n",
-    "For reliability factor, we need to include 'waypoint' since the program provide guidance to the final destination based on where our smartcab is heading.\n",
-    "We don't need to include 'deadline' in our state because adding time dimension into our state will expand the state possibilities and makes our agent not able to learn very well.\n",
-    "We also don't really need to include 'right' input to minimize complexity. When the traffic light is red, we can only stop or turn to the right. This action will not cause our smartcab to collide with the car coming from the right. Also, when the traffic light is green, the cars coming from the right has to stop. Therefore, we can safely exclude 'right' input from our possible states.\n",
+    "\n",
+    "Safety factor: we have to include traffic signal (red or green) and oncoming vehicles(inputs) in our build_state function so that our driving agent will observe the traffic signal (red signal: stop; green: make a move) as well as observe oncoming vehicle to prevent any potential accidents. We can also include 'left' as input. So, our driving agent will observe any potential vehicles coming from the side of left when our driving agent attempts to make a right turn while the traffic light is red.\n",
+    "\n",
+    "Reliability factor: The 'waypoint' is a potential input, since the planner can provide guidance to the final destination based on where our smartcab is moving.\n",
+    "\n",
+    "\n",
+    "We don't have to include 'deadline' as a feature in our state as adding time dimension into our state will expand the state possibilities and makes our agent not able to learn very well.\n",
+    "\n",
+    "TO minimize complexity we don't have to include 'right' as input.\n",
+    "\n",
     "**"
    ]
   },
@@ -275,11 +280,9 @@
    "metadata": {},
    "source": [
     "**Answer:\n",
-    "total number of states = 4 x 2 x 3 x 4 = 96 states\n",
-    "wayward: 4 possible values (None, forward, left, right)\n",
-    "light: 2 possible values (red or green)\n",
-    "oncoming: 3 possible values (forward, left, right)\n",
-    "left: 4 possible values (None, forward, left, right)\n",
+    "\n",
+    "The total number of states are 96. 4 possible values for wayward (None, forward, left, right), 2 values for light (red or green), 3 values for oncoming (forward, left, right) and 4 for left (None, forward, left, right). total: 4 x 2 x 3 x 4).\n",
+    "\n",
     "**"
    ]
   },
@@ -382,13 +385,17 @@
    "metadata": {},
    "source": [
     "**Answer:\n",
-    "1) Our default-learning agent shows some improvement from non-learning agent. Safety score didn't improve and still get F grade. While, reliability score improved from F to A.\n",
-    "For our non-learning agent, there's no improvement in average reward per action as well as number of violations and accidents, regardless of how many trials we run for this agent. This is due to our non-learning agent takes random action and completely ignore q-learning.\n",
-    "As for our default-learning agent, we see some improvements in reliability factor as we run more trials. Using q-learning, our default-learning agent started to learn reward and punishment for the action it takes for each state it is in.\n",
-    "2) Our driving agents will run 20 training trials before testing. Given epsilon-tolerance of 0.05, it makes sense to have 20 training trials as the epsilon is incrementally reduced from 1 to 0 value.\n",
-    "3) Yes, the epsilon decaying function is accurately represented in the parameters panel.\n",
-    "4) Yes, our q-learning agent's performance improved as we run more training trials. The number of bad actions were reduced from 0.29 at the beginning of training trial to 0.13 at the end of training trial. Also, the reward is significantly improved from -4.0 to -0.75.\n",
-    "5) Safety rating still gets F grade but reliability rating improved from F to A.\n",
+    "\n",
+    "The default Q-Learning agent is learning with each trials. In the non-learing agent, safety and reliability were constant and not change with number of trials by the default Q-Learning agent, safety is improving with increasing number  of trials. the default Q-Learning agent is improved compare with the non-learning agent. Overall, safet score was not changes and reliability score improved F to C\n",
+    "\n",
+    "\n",
+    "With epsilon-tolerance of 0.05, the agent will run around 20 training trials before testing and the epsilon is incrementally reduced from 1 to 0 value\n",
+    "\n",
+    "Yes, the epsilon decaying function is accurately represented in the parameters panel.\n",
+    "\n",
+    "Yes,  the default Q-Learning agent bed actions are decreased with the number of trials. The number of bad actions were reduced from 0.35 (first trial) to 0.20 (end of the trial) and rewards is significantly improved from close -5.0 to -1.75.\n",
+    "\n",
+    "Safety rating is still F grade and reliability grade improved from F to C.\n",
     "\n",
     "**"
    ]
@@ -473,11 +480,18 @@
    "source": [
     "**Answer:\n",
     "Answer:\n",
-    "1) self.epsilon = 1 / (math.pow(self.no_trials, 1 / 1.2))\n",
-    "2) with epsilon-tolerant of 0.005, the game ran 3982 training trials and 30 testing trials. 3) epsilon-tolerant=0.005 and alpha=0.5. A small epsilon allows our agent to make less random actions. Combined with a balanced alpha, our agent will take longer time to train q-learning.\n",
-    "4) After fine-tuning epsilon decay function and epsilon-tolerance, there's a significant in safety rating from F to A+, while reliability rating still gets A.\n",
-    "5) yes, the q-learner results show the agent successfully learned an appropriate policy. The rolling rate of reliability jumped from less than 0% to close to 100% and rolling average reward per action improved from -4.0 to 2.0.\n",
-    "6) yes, the safety (A+) and reliability (A) ratings of the Smartcab are satifying.\n",
+    "\n",
+    "I have used decaying function: epsilon = 1 / (math.pow(self.no_trials, 1 / 1.2))\n",
+    "\n",
+    "It was around 3982 training trials run before 30 testing trials\n",
+    "\n",
+    "The epsilon-tolerant=0.001 and alpha=0.5 as the small epsilon allows our agent to make less random actions. Combined with a balanced alpha, our agent will take longer time to train the q-learning\n",
+    "\n",
+    "The safety grade is improved from F to A+ and reliability grade is imporved from C to A.\n",
+    "\n",
+    "Yes, Q-Learner results show that driving agent is learned the policy. The reliability is improve upto 100% and reward per actiion is improved upto 2.\n",
+    "\n",
+    "Yes, the safety (A+) and reliability (A) ratings are satifying\n",
     "\n",
     "**"
    ]
@@ -503,7 +517,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** "
+    "**Answer:\n",
+    "\n",
+    "('forward', 'green', None, 'left')\n",
+    " -- forward : 1.85  -- None : -3.86  -- right : 0.00  -- left : 0.90\n",
+    " \n",
+    " For this plicy, it is makes sense to have positive rewards (1.85) for forward movement which will help the agnet to reach the destination faster. As we have green signal and it make sense to have None have negative rewards.\n",
+    " \n",
+    " ('forward', 'green', 'right', 'right')\n",
+    " -- forward : 0.00  -- None : -2.08  -- right : 1.16  -- left : -15.59\n",
+    " \n",
+    " This ploicy also makes sense as the smartcab asked to take right movement at the green signal, it has highest rewards for the right movement.\n",
+    "\n",
+    "\n",
+    "** "
    ]
   },
   {
@@ -528,9 +555,11 @@
    "metadata": {},
    "source": [
     "**Answer:\n",
-    "Character 1: our smartcab\n",
+    "\n",
+    "The smartcab:\n",
     "In this simulation, we calculate Q-value based on the state where the smartcab is. Regardless of which intersection our smartcab is located in this grid city, the driving agent will face the same inputs (eg. waypoint, traffic light, oncoming traffic) and has to decide its best action. Therefore, it doesn't make sense trying to measure future rewards based on the distance between destination and any specific states.\n",
-    "Character 2: the environment\n",
+    "\n",
+    "The environment:\n",
     "The final destination isn't fixed in one intersection. When the game resets, our smartcab will start from a new intersection and assigned to a random destination. If we assigned Q-value based on intersection, our agent still won't be able to use this q-learning when the starting point and destination change all the time.\n",
     "\n",
     "**"
