--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "**Answer:\n",
     "The smartcab was not moving at all during the simulation.\n",
-    "Since driving agent was stoped close to the traffic signal. the driving agent is receiving rewards based on the action it performs given the traffic signals (traffic red light, green light and no oncoming traffic) and based on its action to reach the final destination. Traffic light colors are affects the reward based on the action that performed by the driving agent such as stop when the traffic light red and move forward/left/right when the light is green will get postive rewards, and no movement at all at green signal and no oncoming trafiic will get negative reards.\n",
+    "Since driving agent was stoped close to the traffic signal. the driving agent is receiving rewards based on the action it performs given the traffic signals (traffic red light, green light and no oncoming traffic) and based on its action to reach the final destination. Traffic light colors are affects the reward based on the action that performed by the driving agent such as stop when the traffic light red and move forward/left/right when the light is green will get postive rewards, and no movement at all at green signal and no oncoming trafiic will get negative reards and agent will get positive rewards when the idles at green light but with traffic.\n",
     "\n",
     "**"
    ]
@@ -527,7 +527,7 @@
     " ('forward', 'green', 'right', 'right')\n",
     " -- forward : 0.00  -- None : -2.08  -- right : 1.16  -- left : -15.59\n",
     " \n",
-    "This ploicy also makes sense as the smartcab asked to take right movement at the green signal, it has highest rewards for the right movement.\n",
+    "This ploicy does not makes sense as the smartcab asked to take the forward movement, but it has highest rewards for the right movement.\n",
     " \n",
     " \n",
     "\n",
